# llmnet

./: .memory.jsonl  404.html  CLAUDE.md  Cargo.toml  README.md  example-composition.json  index.html  nemotron-router-8b.md  print.html  searcher-c2a407aa.js  searchindex-448e645d.js  toc-9ca9bf67.js  toc.html
.github/workflows/: ci.yml  release.yml  validation.yaml
advanced/: error-handling.html  hook-execution.html  variables.html
articles/: medium-llmnet-introduction.md
cli/: deploy.html  overview.html  run.html  serve.html  status.html  validate.html
configuration/: architecture.html  composition.html  conditions.html  functions.html  hooks.html  models.html  secrets.html
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/advanced/: error-handling.md  hook-execution.md  variables.md
docs/book/src/cli/: deploy.md  overview.md  run.md  serve.md  status.md  validate.md
docs/book/src/configuration/: architecture.md  composition.md  conditions.md  functions.md  hooks.md  models.md  secrets.md
docs/book/src/edge-devices/: jetson.md  model-selection.md  (+2 more)
docs/commands/: README.md  context.md  delete.md  deploy.md  get.md  logs.md  run.md  scale.md  serve.md  status.md  validate.md
docs/examples/: basic-chatbot.md  conditional-routing.md  dual-expert.md  multi-layer-pipeline.md  nemotron-router.md  openrouter-pipeline.md
examples/: basic-chatbot.html  basic-chatbot.json  conditional-routing.html  conditional-routing.json  dual-expert.html  dual-expert.json  multi-layer-pipeline.json  multi-layer.html  multiplication-calculator.html  nemotron-router.json  openrouter-pipeline.json  openrouter.html  qwen3-80b-external.json  qwen3-80b-simple.json
getting-started/: first-pipeline.html  installation.html  quick-start.html
src/: cli.rs  lib.rs  main.rs
src/adapters/: mod.rs  openai_api.rs  output.rs
src/cli/: commands.rs  display.rs  mod.rs
src/client/: mod.rs  openai.rs
src/cluster/: api.rs  autoscaler.rs  controller.rs  health_checker.rs  heartbeat.rs  mod.rs  node.rs  orchestrator.rs  pipeline.rs  resources.rs  scoring.rs
src/config/: architecture.rs  composition.rs  functions.rs  mod.rs  models.rs  secrets.rs  validation.rs
src/context/: mod.rs
src/metrics/: mod.rs
src/runtime/: docker.rs  fetch.rs  hooks.rs  llamacpp.rs  mod.rs  node.rs  ollama.rs  orchestrator.rs  processor.rs  request.rs  router.rs  runner.rs  tensorrt_llm.rs  vllm.rs
src/server/: handlers.rs  state.rs
tests/: hooks_integration.rs  remote_deployment.rs
tests/fixtures/: tinyllama.Modelfile
(+9 files in other folders)
