[package]
name = "llmnet"
version = "0.1.0"
edition = "2021"
description = "Orchestrate LLM pipelines based on composition files"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dashmap = "6"
futures = "0.3"

# WebSocket
tokio-tungstenite = "0.26"

# Environment
dotenvy = "0.15"

# Async trait for SBIO
async-trait = "0.1"

# YAML for config files (kubeconfig-style)
serde_yaml = "0.9"

# Home directory detection
dirs = "5"

# System hostname
hostname = "0.4"

# System metrics (CPU, memory, disk)
sysinfo = "0.33"

# GPU metrics (optional)
nvml-wrapper = { version = "0.10", optional = true }

[features]
default = ["gpu"]
gpu = ["nvml-wrapper"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
